# shotgund

./: .gitignore  AUTHORS  Makefile  README.md  TODO  bootstrap.sh  config.status  configure.ac  libtool  shotgund-patch-2010  shotgund.conf  shotgund.conf-sample1  shotgund_log
lib/: Makefile  config.h
lib/.deps/: mempool.Po  reply.Po  resolver.Po
lib/dotconf++/: Makefile
lib/dotconf++/.deps/: dotconfpp.Po  mempool.Po
src/: Makefile  Makefile.am  decl.h  log.cc  shotgund  shotgund.cc  shotgund.h  shotgund_sys.h
src/.deps/: log.Po  resolver_thread.Po  shotgund.Po  shotgund_config.Po  shotgund_resolver.Po  shotgund_signal.Po
